--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <h1>This page shows the earth's surface average temperature from 1880 to the present. Recorded by NASA</h1>
+    <h1>This page shows the earth's surface average temperature from 1880 to the present.</h1>
     <canvas id="chart"></canvas>
 <footer>source: https://data.giss.nasa.gov/gistemp/</footer>
 
